--- a/reports-customer-dues.html
+++ b/reports-customer-dues.html
@@ -10,6 +10,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Custom Styles (Same as Dashboard) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             background-color: #f8f9fa;
@@ -160,7 +161,7 @@
         <div class="container-fluid">
             <h1 class="h3 mb-4">Accounts Receivable (Customer Dues)</h1>
 
-            <div class="card mb-4 total-due-card">
+            <div class="card mb-4 total-due-card animate__animated animate__fadeInUp">
                 <div class="card-body text-center">
                     <div class="text-muted">TOTAL OUTSTANDING DUE</div>
                     <div class="h1 text-danger fw-bold mt-2">৳ 3,654,836</div>
@@ -171,7 +172,7 @@
                 <div class="card-header">
                     <input type="text" class="form-control" placeholder="Search for a customer...">
                 </div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead class="table-light">
