--- a/reports-sales.html
+++ b/reports-sales.html
@@ -10,6 +10,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Custom Styles (Same as Dashboard) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             background-color: #f8f9fa;
@@ -196,7 +197,7 @@
             <!-- Filter Section -->
             <!-- ADDED CLASS to filter card -->
             <div class="card mb-4 filter-card">
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="row g-3 align-items-end">
                         <div class="col-md-3">
                             <label class="form-label">Start Date</label>
@@ -223,7 +224,7 @@
             </div>
 
             <!-- Report Summary -->
-            <div class="row mb-4">
+            <div class="row mb-4 animate__animated animate__fadeInUp">
                 <div class="col-md-4">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
@@ -255,7 +256,7 @@
                 <div class="card-header">
                     Top Selling Products (June 2025)
                 </div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="table-responsive">
                         <table class="table table-bordered">
                             <thead class="table-light">
