--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Custom Styles (Same as Dashboard) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             background-color: #f8f9fa;
@@ -181,7 +182,7 @@
             <!-- Tab Content -->
             <div class="tab-content pt-3" id="settingsTabsContent">
                 <!-- Company Profile Pane -->
-                <div class="tab-pane fade show active" id="profile-pane" role="tabpanel">
+                <div class="tab-pane fade show active animate__animated animate__fadeInUp" id="profile-pane" role="tabpanel">
                     <div class="card">
                         <div class="card-body">
                             <form id="profileForm">
@@ -209,7 +210,7 @@
                 </div>
 
                 <!-- User Management Pane -->
-                <div class="tab-pane fade" id="users-pane" role="tabpanel">
+                <div class="tab-pane fade animate__animated animate__fadeInUp" id="users-pane" role="tabpanel">
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
@@ -252,7 +253,7 @@
                 </div>
 
                 <!-- Financials Pane -->
-                <div class="tab-pane fade" id="financial-pane" role="tabpanel">
+                <div class="tab-pane fade animate__animated animate__fadeInUp" id="financial-pane" role="tabpanel">
                     <div class="card">
                         <div class="card-body">
                             <form id="financialForm">
@@ -272,7 +273,7 @@
                 </div>
 
                 <!-- Customization Pane -->
-                <div class="tab-pane fade" id="custom-pane" role="tabpanel">
+                <div class="tab-pane fade animate__animated animate__fadeInUp" id="custom-pane" role="tabpanel">
                     <div class="card">
                         <div class="card-body">
                             <form id="customizationForm">
@@ -292,7 +293,7 @@
                 </div>
 
                 <!-- Data Pane -->
-                <div class="tab-pane fade" id="data-pane" role="tabpanel">
+                <div class="tab-pane fade animate__animated animate__fadeInUp" id="data-pane" role="tabpanel">
                     <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title mb-3">Data Export</h5>
