--- a/all-create.html
+++ b/all-create.html
@@ -7,6 +7,7 @@
     <title>Master Entry - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             background-color: #f8f9fa
@@ -208,7 +209,7 @@
                 <div class="card-body">
                     <div class="tab-content" id="myTabContent">
                         <!-- Customer & Supplier Forms (remain the same) -->
-                        <div class="tab-pane fade show active p-3" id="customer-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade show active p-3 animate__animated animate__fadeInUp" id="customer-tab-pane" role="tabpanel">
                             <form id="customerForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Customer Name*</label><input
@@ -222,7 +223,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="tab-pane fade p-3" id="supplier-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="supplier-tab-pane" role="tabpanel">
                             <form id="supplierForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Supplier Name*</label><input
@@ -237,7 +238,7 @@
                             </form>
                         </div>
                         <!-- Product Form (UPDATED) -->
-                        <div class="tab-pane fade p-3" id="product-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="product-tab-pane" role="tabpanel">
                             <form id="productForm">
                                 <div class="row g-3">
                                     <div class="col-md-6"><label class="form-label">Product Model/Name*</label><input
@@ -266,13 +267,13 @@
                             </form>
                         </div>
                         <!-- Category & Brand Forms (remain the same) -->
-                        <div class="tab-pane fade p-3" id="category-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="category-tab-pane" role="tabpanel">
                             <form id="categoryForm" class="d-flex" style="max-width: 500px;"><input type="text"
                                     class="form-control me-2" name="name"
                                     placeholder="Enter new category name (e.g., Television)" required><button
                                     type="submit" class="btn btn-primary">Save</button></form>
                         </div>
-                        <div class="tab-pane fade p-3" id="brand-tab-pane" role="tabpanel">
+                        <div class="tab-pane fade p-3 animate__animated animate__fadeInUp" id="brand-tab-pane" role="tabpanel">
                             <form id="brandForm" class="d-flex" style="max-width: 500px;"><input type="text"
                                     class="form-control me-2" name="name"
                                     placeholder="Enter new brand name (e.g., Walton)" required><button type="submit"
@@ -284,7 +285,7 @@
 
             <!-- Display Lists -->
             <div class="row mt-4">
-                <div class="col-lg-6 mb-4 mb-lg-0">
+                <div class="col-lg-6 mb-4 mb-lg-0 animate__animated animate__fadeInUp">
                     <div class="card h-100">
                         <div class="card-header bg-light d-flex justify-content-between align-items-center">Customers
                             List<input type="text" class="form-control form-control-sm search-input" id="customerSearch"
@@ -311,7 +312,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 animate__animated animate__fadeInUp">
                     <div class="card h-100">
                         <div class="card-header bg-light d-flex justify-content-between align-items-center">Suppliers
                             List<input type="text" class="form-control form-control-sm search-input" id="supplierSearch"
@@ -340,7 +341,7 @@
                 </div>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-4 animate__animated animate__fadeInUp">
                 <!-- Products List (UPDATED) -->
                 <div class="col-12">
                     <div class="card">
@@ -377,7 +378,7 @@
                 </div>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-4 animate__animated animate__fadeInUp">
                 <div class="col-md-6 mb-4 mb-md-0">
                     <div class="card">
                         <div class="card-header bg-light">Categories</div>
