--- a/brands-manage.html
+++ b/brands-manage.html
@@ -7,6 +7,7 @@
     <title>Manage Brands - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS */
         body {
@@ -154,7 +155,7 @@
             <h1 class="h3 mb-4">Manage Brands</h1>
             <div class="row">
                 <div class="col-md-5">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-header">Add New Brand</div>
                         <div class="card-body">
                             <form id="addBrandForm" class="d-flex">
@@ -166,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-header">Existing Brands</div>
                         <div class="card-body">
                             <ul class="list-group" id="brandList">
