--- a/customers-list.html
+++ b/customers-list.html
@@ -7,6 +7,8 @@
     <title>Customer List - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    
     <style>
         /* Same CSS as before */
         body {
@@ -159,7 +161,7 @@
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#customerModal"
                     id="addCustomerBtn"><i class="fa fa-user-plus me-1"></i> Add New Customer</button>
             </div>
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <span>All Customers</span>
                     <input type="text" class="form-control form-control-sm w-50" id="customerSearchInput"
