--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         :root {
             --bs-primary-rgb: 71, 121, 222;
@@ -348,7 +349,7 @@
             <!-- Stat Cards Row -->
             <div class="row g-4 mb-4">
                 <!-- Card 1: Total Sales -->
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 animate__animated animate__fadeInUp">
                     <div class="card stat-card h-100">
                         <div class="card-body">
                             <div>
@@ -362,7 +363,7 @@
                     </div>
                 </div>
                 <!-- Card 2: Total Collection -->
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 animate__animated animate__fadeInUp">
                     <div class="card stat-card h-100">
                         <div class="card-body">
                             <div>
@@ -376,7 +377,7 @@
                     </div>
                 </div>
                 <!-- Card 3: Total Due -->
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 animate__animated animate__fadeInUp">
                     <div class="card stat-card h-100">
                         <div class="card-body">
                             <div>
@@ -390,7 +391,7 @@
                     </div>
                 </div>
                 <!-- Card 4: Low Stock -->
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 animate__animated animate__fadeInUp">
                     <div class="card stat-card h-100">
                         <div class="card-body">
                             <div>
@@ -406,14 +407,14 @@
             </div>
 
             <!-- Charts Row -->
-            <div class="row g-4 mb-4">
+            <div class="row g-4 mb-4 animate__animated animate__fadeInUp">
                 <div class="col-lg-7">
                     <div class="card h-100">
                         <div class="card-header"><i class="fa fa-chart-bar me-2"></i>Monthly Sales vs Purchases</div>
                         <div class="card-body d-flex align-items-center"><canvas id="salesPurchaseChart"></canvas></div>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-5 animate__animated animate__fadeInUp">
                     <div class="card h-100">
                         <div class="card-header"><i class="fa fa-chart-pie me-2"></i>Top Selling Brands</div>
                         <div class="card-body d-flex align-items-center"><canvas id="topBrandsChart"></canvas></div>
@@ -422,7 +423,7 @@
             </div>
 
             <!-- Recent Transactions Table -->
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <span><i class="fa fa-history me-2"></i>Recent Transactions</span>
                     <a href="#" class="btn btn-sm btn-outline-primary">View All</a>
