--- a/expenses-manage.html
+++ b/expenses-manage.html
@@ -10,6 +10,7 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Custom Styles (Same as Dashboard) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
             background-color: #f8f9fa;
@@ -161,7 +162,7 @@
                 <div class="card-header">
                     Add New Expense Entry
                 </div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <!-- ADDED ID TO FORM -->
                     <form class="row g-3 align-items-end" id="addExpenseForm">
                         <div class="col-md-2">
@@ -205,7 +206,7 @@
                 <div class="card-header">
                     Recent Expenses Log
                 </div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="table-responsive">
                         <table class="table table-striped table-hover">
                             <thead class="table-light">
