--- a/inventory-products.html
+++ b/inventory-products.html
@@ -7,6 +7,7 @@
     <title>Product List - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS as before */
         body {
@@ -174,7 +175,7 @@
                 <div class="card-header d-flex justify-content-between"><input type="text"
                         class="form-control form-control-sm" id="searchInput"
                         placeholder="Search by Model, Item, or Brand..."></div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="table-responsive">
                         <table class="table table-hover table-bordered">
                             <thead class="table-light">
