--- a/items-manage.html
+++ b/items-manage.html
@@ -7,6 +7,7 @@
     <title>Manage Item Categories - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS */
         body {
@@ -155,7 +156,7 @@
             <h1 class="h3 mb-4">Manage Item Categories</h1>
             <div class="row">
                 <div class="col-md-5">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-header">Add New Category</div>
                         <div class="card-body">
                             <form id="addItemForm" class="d-flex">
@@ -167,7 +168,7 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="card">
+                    <div class="card animate__animated animate__fadeInUp">
                         <div class="card-header">Existing Categories</div>
                         <div class="card-body">
                             <ul class="list-group" id="itemList">
