--- a/reports-stock-ledger.html
+++ b/reports-stock-ledger.html
@@ -7,6 +7,7 @@
     <title>Stock Ledger Report - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS as previous pages */
         body {
@@ -154,7 +155,7 @@
         <div class="container-fluid">
             <h1 class="h3 mb-4">Stock Ledger Report</h1>
             <div class="card mb-4">
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="row g-3 align-items-end">
                         <div class="col-md-3"><label class="form-label">Start Date</label><input type="date"
                                 class="form-control" id="startDate" value="2025-02-24"></div>
@@ -174,7 +175,7 @@
             </div>
             <div class="card">
                 <div class="card-header">Statement of Stock For The Period of 24 February 2025 to 31 December 2025</div>
-                <div class="card-body">
+                <div class="card-body animate__animated animate__fadeInUp">
                     <div class="table-responsive">
                         <table class="table table-bordered table-sm">
                             <thead class="table-light">
