--- a/sales-manage-invoices.html
+++ b/sales-manage-invoices.html
@@ -7,6 +7,7 @@
     <title>Manage Invoices - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS */
         body {
@@ -152,7 +153,7 @@
                 <a href="sales-create.html" class="btn btn-primary"><i class="fa fa-plus me-1"></i> Create New
                     Invoice</a>
             </div>
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header">
                     <div class="row g-2 align-items-center">
                         <div class="col-md-8"><input type="text" class="form-control form-control-sm"
