--- a/sales-return-create.html
+++ b/sales-return-create.html
@@ -7,6 +7,7 @@
     <title>Create Sales Return - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS as previous pages */
         body {
@@ -148,7 +149,7 @@
     <main class="main-content">
         <div class="container-fluid">
             <h1 class="h3 mb-4">Process a Sales Return</h1>
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-body p-4">
                     <div class="row g-3 align-items-end mb-4">
                         <div class="col-md-3"><label for="originalInvoice" class="form-label">Original Invoice
