--- a/suppliers-manage.html
+++ b/suppliers-manage.html
@@ -7,6 +7,7 @@
     <title>Manage Suppliers - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         /* Same CSS as other pages */
         body {
@@ -153,7 +154,7 @@
                 <li class="nav-item"><a class="nav-link active" href="suppliers-manage.html">Suppliers</a></li>
             </ul>
             <h1 class="h3 mb-4">Manage Suppliers</h1>
-            <div class="card mb-4">
+            <div class="card mb-4 animate__animated animate__fadeInUp">
                 <div class="card-body">
                     <form class="row g-3 align-items-end" id="addSupplierForm">
                         <div class="col-md-4"><label for="supplierNameInput" class="form-label">Supplier
@@ -168,7 +169,7 @@
                     </form>
                 </div>
             </div>
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-header">All Suppliers</div>
                 <div class="card-body">
                     <table class="table table-hover">
