--- a/all-create.html
+++ b/all-create.html
@@ -118,10 +118,10 @@
         </div>
     </nav>
 
+   
     <div class="sidebar">
-        <!-- Sidebar content remains the same -->
         <nav class="nav flex-column">
-            <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
+            <a class="nav-link" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
             <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
             <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
@@ -158,30 +158,11 @@
             </a>
             <div class="collapse show" id="salesCollapse">
                 <nav class="nav flex-column">
-                    <a class="nav-link nav-sub-link" href="sales-create.html">New Invoice</a>
+                    <a class="nav-link nav-sub-link active" href="sales-create.html">New Invoice</a>
                     <a class="nav-link nav-sub-link" href="sales-manage-invoices.html">Invoice List</a>
                     <a class="nav-link nav-sub-link" href="sales-return-create.html">Process Return</a>
                 </nav>
             </div>
-            <a class="nav-link" data-bs-toggle="collapse" href="#financeCollapse" role="button" aria-expanded="true">
-                <i class="fa fa-wallet fa-fw"></i> Finance <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="financeCollapse">
-                <nav class="nav flex-column">
-                    <a class="nav-link nav-sub-link" href="expenses-manage.html">Manage Expenses</a>
-                </nav>
-            </div>
-            <a class="nav-link" data-bs-toggle="collapse" href="#reportsCollapse" role="button" aria-expanded="true">
-                <i class="fa fa-chart-pie fa-fw"></i> Reports <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="reportsCollapse">
-                <nav class="nav flex-column">
-                    <a class="nav-link nav-sub-link" href="reports-sales.html">Sales Report</a>
-                    <a class="nav-link nav-sub-link" href="reports-stock-ledger.html">Stock Ledger</a>
-                    <a class="nav-link nav-sub-link" href="reports-customer-dues.html">Customer Dues</a>
-                </nav>
-            </div>
-            <a class="nav-link" href="settings.html"><i class="fa fa-cog fa-fw"></i> Settings</a>
         </nav>
     </div>
 
