--- a/sales-manage-invoices.html
+++ b/sales-manage-invoices.html
@@ -81,24 +81,72 @@
         </div>
     </nav>
 
-    
-    
-     <div class="sidebar">
+    <div class="sidebar">
         <nav class="nav flex-column">
-            <!-- Sidebar links copied from your original file -->
-            <a class="nav-link" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
+            <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
             <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
-            <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true"><i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="contactsCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="customers-list.html">Customers</a><a class="nav-link nav-sub-link" href="suppliers-manage.html">Suppliers</a></nav></div>
-            <a class="nav-link" data-bs-toggle="collapse" href="#inventoryCollapse" role="button" aria-expanded="true"><i class="fa fa-box-open fa-fw"></i> Inventory <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="inventoryCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="inventory-products.html">Product List</a><a class="nav-link nav-sub-link" href="items-manage.html">Item Categories</a><a class="nav-link nav-sub-link" href="brands-manage.html">Brands</a></nav></div>
-            <a class="nav-link" data-bs-toggle="collapse" href="#purchasesCollapse" role="button" aria-expanded="true"><i class="fa fa-shopping-cart fa-fw"></i> Purchases <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="purchasesCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a><a class="nav-link nav-sub-link" href="#">Purchase List</a></nav></div>
-            <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true"><i class="fa fa-file-invoice-dollar fa-fw"></i> Sales <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="salesCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="sales-create.html">New Invoice</a><a class="nav-link nav-sub-link" href="sales-manage-invoices.html">Invoice List</a><a class="nav-link nav-sub-link" href="sales-return-create.html">Process Return</a></nav></div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="contactsCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="customers-list.html">Customers</a>
+                    <a class="nav-link nav-sub-link" href="suppliers-manage.html">Suppliers</a>
+                </nav>
+            </div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#inventoryCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-box-open fa-fw"></i> Inventory <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="inventoryCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="inventory-products.html">Product List</a>
+                    <a class="nav-link nav-sub-link" href="items-manage.html">Item Categories</a>
+                    <a class="nav-link nav-sub-link" href="brands-manage.html">Brands</a>
+                </nav>
+            </div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#purchasesCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-shopping-cart fa-fw"></i> Purchases <i
+                    class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="purchasesCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="purchases-create.html">New Purchase</a>
+                    <a class="nav-link nav-sub-link" href="#">Purchase List</a>
+                </nav>
+            </div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-file-invoice-dollar fa-fw"></i> Sales <i
+                    class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="salesCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="sales-create.html">New Invoice</a>
+                    <a class="nav-link nav-sub-link" href="sales-manage-invoices.html">Invoice List</a>
+                    <a class="nav-link nav-sub-link" href="sales-return-create.html">Process Return</a>
+                </nav>
+            </div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#financeCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-wallet fa-fw"></i> Finance <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="financeCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="expenses-manage.html">Manage Expenses</a>
+                </nav>
+            </div>
             <!-- New Collection Links -->
             <a class="nav-link" data-bs-toggle="collapse" href="#collectionsCollapse" role="button" aria-expanded="true"><i class="fa fa-hand-holding-dollar fa-fw"></i> Collections <i class="fa fa-chevron-down fa-xs float-end mt-1"></i></a>
-            <div class="collapse show" id="collectionsCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="emi-collection.html">EMI Collection</a><a class="nav-link nav-sub-link" href="due-collection.html">Due Collection</a><a class="nav-link nav-sub-link active" href="customer-ledger.html">Customer Ledger</a></nav></div>
+            <div class="collapse show" id="collectionsCollapse"><nav class="nav flex-column"><a class="nav-link nav-sub-link" href="emi-collection.html">EMI Collection</a><a class="nav-link nav-sub-link" href="due-collection.html">Due Collection</a><a class="nav-link nav-sub-link" href="customer-ledger.html">Customer Ledger</a></nav></div>
+            <a class="nav-link" data-bs-toggle="collapse" href="#reportsCollapse" role="button" aria-expanded="true">
+                <i class="fa fa-chart-pie fa-fw"></i> Reports <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
+            </a>
+            <div class="collapse show" id="reportsCollapse">
+                <nav class="nav flex-column">
+                    <a class="nav-link nav-sub-link" href="reports-sales.html">Sales Report</a>
+                    <a class="nav-link nav-sub-link" href="reports-stock-ledger.html">Stock Ledger</a>
+                    <a class="nav-link nav-sub-link" href="reports-customer-dues.html">Customer Dues</a>
+                </nav>
+            </div>
+            <a class="nav-link" href="settings.html"><i class="fa fa-cog fa-fw"></i> Settings</a>
         </nav>
     </div>
     <main class="main-content">
